tests/machine/x/kt/str_builtin.error
Error on line 0: kotlinc error: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kt/str_builtin.kt:2:10: error: unresolved reference: str
	println(str(123))
         ^

1: fun main() {
