tests/machine/x/kt/str_builtin.kt
fun main() {
	println(str(123))
}
